# ctl

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
example/: formula.ctl  graph.gts
inc/: exceptions.hpp  util.hpp
inc/checker/: checker.hpp
inc/formula/: formula.hpp  formula_parser.hpp
inc/graph/: graph_reader.hpp  ts.hpp
src/formula/: formula.cpp  formula_parser.cpp
src/graph/: graph_reader.cpp  ts.cpp
tests/: CMakeLists.txt  doctest.hpp  main.cpp  util_test.cpp
